--- a/app/src/main/res/layout/activity_klaxon.xml
+++ b/app/src/main/res/layout/activity_klaxon.xml
@@ -1,73 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:id="@+id/root"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@drawable/klaxon_background"
-              android:orientation="vertical"
-              tools:context="com.cvv.fanstaticapps.randomticker.activities.KlaxonActivity">
+			  xmlns:app="http://schemas.android.com/apk/res-auto"
+			  xmlns:tools="http://schemas.android.com/tools"
+			  android:id="@+id/root"
+			  android:keepScreenOn="true"
+			  android:layout_width="match_parent"
+			  android:layout_height="match_parent"
+			  android:background="@drawable/klaxon_background"
+			  android:orientation="vertical"
+			  tools:context="com.cvv.fanstaticapps.randomticker.activities.KlaxonActivity">
 
 	<FrameLayout
-		android:id="@+id/waitingIcon"
-		android:layout_width="match_parent"
-		android:layout_height="0dp"
-		android:layout_marginBottom="8dp"
-		android:layout_weight="2"
-		android:padding="@dimen/sectionMargin">
+			android:id="@+id/waitingIcon"
+			android:layout_width="match_parent"
+			android:layout_height="0dp"
+			android:layout_marginBottom="8dp"
+			android:layout_weight="2"
+			android:padding="@dimen/sectionMargin">
 
 		<ImageView
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:src="@drawable/ic_timer_outer_part"/>
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:src="@drawable/ic_timer_outer_part"/>
 
 		<ImageView
-			android:id="@+id/timerHand"
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:src="@drawable/ic_timer_hand"/>
+				android:id="@+id/timerHand"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:src="@drawable/ic_timer_hand"/>
 	</FrameLayout>
 
 	<TextView
-		android:id="@+id/elapsedTime"
-		android:layout_gravity="center"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:text="@string/show_elapsed_time"
-		android:textColor="@android:color/primary_text_light"/>
-
-	<pl.bclogic.pulsator4droid.library.PulsatorLayout
-		android:id="@+id/pulsator"
-		android:layout_width="match_parent"
-		android:layout_height="0dp"
-		android:layout_gravity="center_horizontal"
-		android:layout_marginBottom="16dp"
-		android:layout_marginEnd="16dp"
-		android:layout_marginStart="16dp"
-		android:layout_weight="1"
-		android:gravity="center"
-		app:pulse_color="@color/dismissColor"
-		app:pulse_count="4"
-		app:pulse_duration="4000"
-		app:pulse_interpolator="Linear"
-		app:pulse_repeat="0"
-		app:pulse_startFromScratch="true"
-		tools:layout_editor_absoluteX="16dp">
-
-		<ImageView
-			android:id="@+id/dismissButton"
-			style="@style/Base.TextAppearance.AppCompat.Widget.Button"
+			android:id="@+id/elapsedTime"
+			android:layout_gravity="center"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_centerInParent="true"
-			android:background="@drawable/ic_cancel_filler"
-			android:contentDescription="@android:string/cancel"
-			android:elevation="4dp"
-			android:minHeight="@dimen/dismissButtonMinSize"
-			android:minWidth="@dimen/dismissButtonMinSize"
-			android:src="@drawable/ic_cancel"
-			android:tint="@color/dismissColor"/>
+			android:text="@string/show_elapsed_time"
+			android:textColor="@android:color/primary_text_light"/>
+
+	<pl.bclogic.pulsator4droid.library.PulsatorLayout
+			android:id="@+id/pulsator"
+			android:layout_width="match_parent"
+			android:layout_height="0dp"
+			android:layout_gravity="center_horizontal"
+			android:layout_marginBottom="16dp"
+			android:layout_marginEnd="16dp"
+			android:layout_marginStart="16dp"
+			android:layout_weight="1"
+			android:gravity="center"
+			app:pulse_color="@color/dismissColor"
+			app:pulse_count="4"
+			app:pulse_duration="4000"
+			app:pulse_interpolator="Linear"
+			app:pulse_repeat="0"
+			app:pulse_startFromScratch="true"
+			tools:layout_editor_absoluteX="16dp">
+
+		<ImageView
+				android:id="@+id/dismissButton"
+				style="@style/Base.TextAppearance.AppCompat.Widget.Button"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_centerInParent="true"
+				android:background="@drawable/ic_cancel_filler"
+				android:contentDescription="@android:string/cancel"
+				android:elevation="4dp"
+				android:minHeight="@dimen/dismissButtonMinSize"
+				android:minWidth="@dimen/dismissButtonMinSize"
+				android:src="@drawable/ic_cancel"
+				android:tint="@color/dismissColor"/>
 	</pl.bclogic.pulsator4droid.library.PulsatorLayout>
 
 </LinearLayout>
