--- a/random-ticker-base/src/main/res/drawable/klaxon_background.xml
+++ b/random-ticker-base/src/main/res/drawable/klaxon_background.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-	<item>
-		<shape android:shape="rectangle">
-			<gradient
-					android:angle="270"
-					android:startColor="@color/colorPrimaryDark"
-					android:endColor="@android:color/white"/>
-		</shape>
-	</item>
-</layer-list>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+	   android:shape="rectangle">
+	<gradient
+			android:angle="270"
+			android:startColor="@color/colorPrimaryDark"
+			android:centerColor="@android:color/white"
+			android:endColor="@android:color/white"/>
+</shape>
