--- a/random-ticker-base/src/main/res/layout/activity_klaxon.xml
+++ b/random-ticker-base/src/main/res/layout/activity_klaxon.xml
@@ -10,25 +10,18 @@
 			  android:orientation="vertical"
 			  tools:context="com.fanstaticapps.randomticker.activities.KlaxonActivity">
 
-	<FrameLayout
+
+	<com.airbnb.lottie.LottieAnimationView
 			android:id="@+id/waitingIcon"
 			android:layout_width="match_parent"
 			android:layout_height="0dp"
 			android:layout_marginBottom="8dp"
 			android:layout_weight="2"
-			android:padding="@dimen/sectionMargin">
-
-		<ImageView
-				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:src="@drawable/ic_timer_outer_part"/>
-
-		<ImageView
-				android:id="@+id/timerHand"
-				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:src="@drawable/ic_timer_hand"/>
-	</FrameLayout>
+			android:paddingTop="@dimen/sectionMargin"
+			android:paddingBottom="@dimen/sectionMargin"
+			app:lottie_rawRes="@raw/soda_loader"
+			app:lottie_loop="true"
+			app:lottie_autoPlay="true"/>
 
 	<TextView
 			android:id="@+id/elapsedTime"
