--- a/random-ticker-base/src/main/res/layout/content_bookmarks.xml
+++ b/random-ticker-base/src/main/res/layout/content_bookmarks.xml
@@ -7,7 +7,7 @@
 	<EditText
 			android:inputType="textCapWords"
 			android:id="@+id/etBookmarkName"
-			android:hint="@string/bookmark_1"
+			android:hint="@string/add_bookmark"
 			android:layout_width="0dp"
 			android:layout_weight="1"
 			android:layout_height="wrap_content"
