--- a/random-ticker-base/src/main/res/values/styles.xml
+++ b/random-ticker-base/src/main/res/values/styles.xml
@@ -14,6 +14,7 @@
 
 	<style name="AppTheme.Button" parent="Widget.AppCompat.Button.Colored">
 		<item name="android:layout_height">wrap_content</item>
+		<item name="android:minHeight">56dp</item>
 		<item name="android:layout_width">match_parent</item>
 		<item name="android:layout_marginTop">@dimen/sectionMargin</item>
 	</style>
@@ -48,16 +49,15 @@
 		<item name="android:textStyle">bold</item>
 		<item name="android:textAllCaps">true</item>
 		<item name="android:layout_marginStart">@dimen/activityPaddingHorizontal</item>
-		<item name="android:textAppearance">@style/Base.TextAppearance.AppCompat.Medium</item>
+		<item name="android:textAppearance">@style/Base.TextAppearance.AppCompat.Subhead</item>
 	</style>
 
 	<style name="AppTheme.Base.Description">
 		<item name="android:layout_height">wrap_content</item>
 		<item name="android:layout_width">wrap_content</item>
-		<item name="android:textAppearance">@style/Base.TextAppearance.AppCompat.Large</item>
+		<item name="android:textAppearance">@style/Base.TextAppearance.AppCompat.Tooltip</item>
 		<item name="android:layout_marginBottom">@dimen/titleMargin</item>
 	</style>
-
 
 	<style name="AppTheme.Label" parent="AppTheme.Base.Label"/>
 
